--- a/ControllersContainer/pom.xml
+++ b/ControllersContainer/pom.xml
@@ -13,6 +13,7 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20151123</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
     <build>
@@ -28,5 +29,28 @@
             </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>qa</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>install</phase>
+                                <goals>
+                                    <goal>copy-dependencies</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
