json jar added and git ignore updated

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .idea
 .DS_Store
 *.iml
+*.jar
+/ControllersContainer/target/maven-status
+/ControllersContainer/target/maven-archiver
+/ControllersContainer/target/surefire
+/ControllersContainer/target/generated-sources
