--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,7 @@ add_executable(DicesServer ${SOURCE_FILES} ${MISCELLANOUS} ${JAVA_SOURCE_FILES} 
         Server/GameServer/Server/Serializer/GamesSerializer.cpp Server/GameServer/Server/Serializer/GamesSerializer.h
         Server/GameServer/Event/RequestQueue.cpp Server/GameServer/Event/RequestQueue.h
         Server/StartUp/MainServer.cpp Server/StartUp/MainServer.h
-        Server/Logger/Logger.cpp Server/Logger/Logger.h Server/Logger/LogParser.cpp Server/Logger/LogParser.h )
+        Server/Logger/Logger.cpp Server/Logger/Logger.h Server/Logger/LogParser.cpp Server/Logger/LogParser.h Server/GameServer/Instance/Observer/ObsCmdDeserializer.cpp Server/GameServer/Instance/Observer/ObsCmdDeserializer.h Server/GameServer/Java/Instance/JConfig.cpp Server/GameServer/Java/Instance/JConfig.h)
 
 if(Boost_FOUND)
 
@@ -70,6 +70,6 @@ if(Boost_FOUND)
 endif()
 
 if(JNI_FOUND)
-    target_link_libraries(DicesServer ${JNI_LIBRARIES})
+    target_link_libraries(DicesServer ${JNI_LIBRARIES} )
 
 endif()
