--- a/ControllersContainer/pom.xml
+++ b/ControllersContainer/pom.xml
@@ -43,7 +43,7 @@
                                     <goal>copy-dependencies</goal>
                                 </goals>
                                 <configuration>
-                                    <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                                    <outputDirectory>${project.build.directory}/classes</outputDirectory>
                                 </configuration>
                             </execution>
                         </executions>
